--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "NODE_OPTIONS=--openssl-legacy-provider next start"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.7.0",
     "google-spreadsheet": "^3.0.13",
     "localforage": "^1.9.0",
     "next": "9.5.3",
